# Adapt-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  description.txt  docker-compose.yml  pyproject.toml  start.sh
scratch/: test_api.py
src/: main.py
src/api/: routes.py
src/config/: prompts.yaml  settings.py
src/core/: config.py
src/db/: mongo_client.py
src/llms/: groq.py  openai.py
src/memory/: chat_history.py  chat_history_mongo.py
src/models/: grade.py  route_identifier.py  state.py  verification_result.py
src/rag/: graph_builder.py  reAct_agent.py  retriever_setup.py
src/tools/: common_tools.py  graph_tools.py
streamlit_app/: home.py
streamlit_app/pages/: chat.py
streamlit_app/utils/: api_client.py
