[project]
name = "adapt-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4~=4.13.4",
    "bs4~=0.0.2",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.0",
    "langchain~=0.3.27",
    "langchain-community~=0.3.27",
    "langchain-core~=0.3.72",
    "langchain-groq>=0.3.8",
    "langchain-openai~=0.3.28",
    "langchain-text-splitters~=0.3.9",
    "langgraph~=0.5.4",
    "motor>=3.7.1",
    "pydantic~=2.11.7",
    "pymongo>=4.17.0",
    "python-dotenv~=1.1.1",
    "pyyaml~=6.0.2",
    "requests~=2.32.4",
    "sentence-transformers>=3.0.1",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
